남은 작업들 진행
